fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval3435492678118513628_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 1
    importance for inclusion in the knapsack solution by using a ratio or proportion based on prize to weight comparisons.
               ^^^
SyntaxError: invalid syntax
